# AxonSurf

./: .gitignore  CHANGELOG.md  CMakeLists.txt  GES.md  LIMITATIONS.md  README.md  ROADMAP.md  SKILL.md  axonsurf  install.sh
.github/workflows/: ci.yml  release.yml
extensions/: auto-scroll.js  click-counter.js  color-changer.js  cookie-manager.js  form-filler.js  gray.user.js  page-analyzer.js  proxy-manager.js
extensions/cookie-manager/: background.js  content.js  manifest.json
scripts/: install-deps.sh  run-headless.sh
src/: page.c  page.h
src/commands/: cmd_utils.h  elements.c  elements.h  extensions.c  extensions.h  input.c  input.h  media.c  media.h  monitoring.c  monitoring.h  navigation.c  navigation.h  screenshot.c  screenshot.h  storage.c  storage.h  tabs.c  tabs.h  window.c  window.h
src/core/: browser.c  browser.h  command.c  command.h  main.c
src/elements/: elements.c  elements.h
src/extensions/: extensions.c  extensions.h
src/headless/: headless.c  headless.h
src/input/: humanize.c  humanize.h  input.c  input.h
src/media/: media.c  media.h  screenshot.c  screenshot.h  video.c  video.h
src/monitor/: monitoring.c  monitoring.h
src/navigation/: navigation.c  navigation.h
src/storage/: profile.c  profile.h
src/webext/: axonsurf_webext.c
tests/: run_tests.sh  test_cmd_utils.c  test_harness.h  test_humanize.c  test_profile.c  test_runner.c  test_video.c
